--- a/classwork.html
+++ b/classwork.html
@@ -49,7 +49,7 @@
         // action upon clicking the button 
         btn.addEventListener(
             "click", function () {
-                // we want to chenge the text of the paragraph with id loremText
+                // we want to change the text of the paragraph with id loremText
                 document.getElementById("loremText").textContent = "The text has changed after clicking the button";
             }
 
