used alert to display element

--- a/dom.html
+++ b/dom.html
@@ -7,10 +7,17 @@
 </head>
 <body>
     <p id="demo"> Hello Rapha</p>
+    <p class="about"></p>
+    <p id="demo2">My name is Rapha</p>
 
     <script>
         let content = document.getElementById("demo").innerHTML;
         console.log(content);
+
+        let content1 = document.getElementById("demo2");
+        alert(content1.innerHTML);
+
+
     </script>
 </body>
 </html>
